update dark mode and fixing layout

--- a/src/input.css
+++ b/src/input.css
@@ -16,12 +16,18 @@
 
 @layer components {
   .hamburger-line {
-    @apply w-[30px] h-[2px] my-2 block bg-dark transition duration-300 ease-in-out;
+    @apply my-2 block h-[2px] w-[30px] bg-dark transition duration-300 ease-in-out dark:bg-white;
+  }
+}
+
+@layer utilities {
+  #dark-mode-toggle:checked ~ label div.toggle-circle {
+    @apply translate-x-3;
   }
 }
 
 .navbar-fixed {
-  @apply fixed z-[9999] bg-white bg-opacity-70 backdrop-blur;
+  @apply fixed z-[9999] bg-white bg-opacity-70 backdrop-blur dark:bg-dark dark:bg-opacity-50;
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -35,4 +41,8 @@
 
 .hamburger-active > span:nth-child(3) {
   @apply -rotate-45;
+}
+
+.drop-down-active {
+  @apply dark:bg-slate-800;
 }
